Improve warning message when using admin commands that require directories with COSI paths ()